# High-Concurrency-Safe-Transfer-System

./: .gitignore  AGENT.md  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: c-build-test.yml
docs/: git-cowork-guidence.md  prd.md  project_spec.md
include/: bank.h  logger.h  protocol.h  utils.h
src/client/: CMakeLists.txt  main.c
src/common/: CMakeLists.txt  bank_logic  bank_logic.c  logger.c  mq_wrapper.c  protocol.c  shm_manager.c  shm_wrapper.c
src/server/: CMakeLists.txt  main.c  server_mq  server_mq_example.c
tests/: CMakeLists.txt  test_bank.c  test_logger.c  test_monitor.c  test_robust_crash.c  tests.sh
